Fixed various padding and increased grid gap

--- a/style.css
+++ b/style.css
@@ -7,10 +7,18 @@ body {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-size: 125%;
     margin: auto;
-    padding: 3%;
+    padding: 4%;
     width: 80%;
 }
 
+h1{
+    background-color: antiquewhite;
+    padding: 20px;
+    margin-top:0px;
+    margin-left: -5%;
+    margin-bottom: 20px;
+    margin-right: -5%;
+}
 #book-review{
 padding: 15px;
 
@@ -58,10 +66,7 @@ img {
 }
 
 figure {
-    margin: -5px;
-    margin-right: 15px;
-    padding:20px;
-    padding: 5px, 15px;
+    margin: auto;
     max-width: fit-content;
     text-align: center;
     box-sizing: border-box; 
@@ -112,7 +117,7 @@ fieldset{
 .grid-container {
     display: grid;
     grid-template-columns: [first]35% [end]auto;
-    gap: 10px;
+    gap: 35px;
     grid-auto-rows: minmax(100px, auto);
   }
   .one {
